<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/activity_horizontal_margin"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/userType"
            layout="@layout/radio_buttton_layout" />

        <android.support.design.widget.TextInputLayout
            style="@style/LogInTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/MyHintText">

            <EditText
                android:id="@+id/signinUserid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_mobile"
                android:drawableStart="@drawable/ic_mobile"
                android:drawablePadding="16dp"
                android:hint="@string/user"
                android:inputType="phone"
                android:theme="@style/MyEditText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/LogInTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/MyHintText">

            <EditText
                android:id="@+id/signinPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_password"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="16dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:theme="@style/MyEditText" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/ForgetPassword"
            style="@style/LogInTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorAccent" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/loginButton"
            style="@style/MyButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/log_in"
            android:theme="@style/MyButtonTheme"
            />

        <TextView
            style="@style/LogInTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/new_user_msg"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorAccent" />

        <ProgressBar
            android:id="@+id/signInProgBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </LinearLayout>

</ScrollView>




