<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/addDustbinToolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/title4"
            app:titleMarginStart="24dp">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:actionBarSize">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">


            <android.support.design.widget.TextInputLayout
                style="@style/LogInTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyErrorText"
                app:hintTextAppearance="@style/MyHintText">

                <EditText
                    android:id="@+id/areaId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_area"
                    android:drawableStart="@drawable/ic_area"
                    android:drawablePadding="16dp"
                    android:hint="@string/add1"
                    android:inputType="text"
                    android:theme="@style/MyEditText" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/LogInTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyErrorText"
                app:hintTextAppearance="@style/MyHintText">

                <EditText
                    android:id="@+id/dustbinId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_smart_dustbin_icon"
                    android:drawableStart="@drawable/ic_smart_dustbin_icon"
                    android:drawablePadding="16dp"
                    android:hint="@string/add2"
                    android:inputType="text"
                    android:theme="@style/MyEditText" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/LogInTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyErrorText"
                app:hintTextAppearance="@style/MyHintText">

                <EditText
                    android:id="@+id/sensorId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_sensor"
                    android:drawableStart="@drawable/ic_sensor"
                    android:drawablePadding="16dp"
                    android:hint="@string/add3"
                    android:inputType="text"
                    android:theme="@style/MyEditText" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/getLocationBtn"
                style="@style/MyButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="6dp"
                android:text="@string/add7"
                android:theme="@style/MyButtonTheme" />


            <android.support.design.widget.TextInputLayout
                style="@style/LogInTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyErrorText"
                app:hintTextAppearance="@style/MyHintText">

                <EditText
                    android:id="@+id/lattitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lattlong"
                    android:drawableStart="@drawable/ic_lattlong"
                    android:drawablePadding="16dp"
                    android:hint="@string/add4"
                    android:inputType="text"
                    android:theme="@style/MyEditText" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/LogInTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyErrorText"
                app:hintTextAppearance="@style/MyHintText">

                <EditText
                    android:id="@+id/longitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lattlong"
                    android:drawableStart="@drawable/ic_lattlong"
                    android:drawablePadding="16dp"
                    android:hint="@string/add5"
                    android:inputType="text"
                    android:theme="@style/MyEditText" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/fullAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/md_keylines"
                android:layout_marginBottom="@dimen/md_keylines"
                android:visibility="gone"
                android:text = "hello"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/addDustbinBtn"
                style="@style/MyButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/add6"
                android:theme="@style/MyButtonTheme" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
